--- a/index.html
+++ b/index.html
@@ -1,12 +1,279 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-MX" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home - La Casa del Pastelero Nany's</title>
+    <!-- FUENTES ============================================================-->
+
+    <!-- FANCYBOX ===========================================================-->
+    <link rel="preload" href="assets/helpers/fancybox/jquery.fancybox.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="assets/helpers/fancybox/jquery.fancybox.min.css"></noscript>
+    <!-- OWLCAROUSEL ========================================================-->
+    <link rel="stylesheet" href="assets/helpers/owlcarousel/owl.carousel.min.css">
+    <!-- AOS ================================================================-->
+    <link rel="preload" href="assets/helpers/aos/aos.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="assets/helpers/aos/aos.css"></noscript>
+    <!-- SLYTES =============================================================-->
+    <link rel="stylesheet" href="assets/css/master.css">
 </head>
+
 <body>
-    <h1>Prueba</h1>
+    <!-- =======================================================================
+    | HEADER
+    ======================================================================= -->
+
+    <header class="fondo-sections">
+        <div class="container">
+            <div class="row header-top">
+                <div class="col-4 d-flex align-items-start justify-content-center">
+                    <img class="img-fluid call" src="assets/images/icons/call.svg" alt="">
+                    <p>
+                        <a href="tel:1606473">1606473</a>-<a href="tel:1604372">1604372</a>-<a href="tel:1580196">1580196</a>
+                    </p>
+                </div>
+                <div class="col-4">
+                    <a href="#"><img class="img-fluid logo" src="assets/images/logos/LOGO-PASTELERO-NANYS.png" alt=""></a>
+                </div>
+                <div class="col-4">
+                    <img class="img-fluid" src="assets/images/icons/search.svg" alt="">
+                    <img class="img-fluid" src="assets/images/icons/login.svg" alt="">
+                    <a href="">Ingresar</a> |
+                    <a href="">Crear Cuenta</a>
+                </div>
+            </div>
+        </div>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img class="img-fluid logo-hitec" src="" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <img src="" alt="">
+                        </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="home.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotros.html">Historia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="metodologia.html">Marcas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sucursales.html">Recetas y cursos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="bolsa-de-trabajo.html">Bolsa de trabajo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="blog.html">Contactos</a>
+                        </li>
+                    </ul>
+                    <div class="ml-5">
+                        <img class="img-fluid" src="assets/images/icons/cart-header.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- =======================================================================
+    | CONTENT
+    ======================================================================= -->
+    <main>
+        <!-- SECTION BANNER PRINCIPAL-->
+        <section class="section-banner">
+            <div class="container">
+                <picture>
+                    <source srcset="assets/images/mobile/home/banner.jpg" media="(max-width:768px)" alt="">
+                    <source srcset="assets/images/desktop/home/banner.jpg" alt="">
+                    <img class="img-fluid banner-home" src="assets/images/desktop/home/banner.jpg" alt="">
+                </picture>
+                <div class="row">
+
+                </div>
+            </div>
+        </section>
+        <!-- SECTION INSUMOS -->
+        <section class="section-insumo">
+            <div class="container fondo-sections">
+                <div class="row justify-content-center">
+                    <a href="#"><img src="assets/images/icons/insumos.svg" alt=""></a>
+                    <a href="#"><img src="assets/images/icons/insumos.svg" alt=""></a>
+                    <a href="#"><img src="assets/images/icons/insumos.svg" alt=""></a>
+                    <a href="#"><img src="assets/images/icons/insumos.svg" alt=""></a>
+                </div>
+            </div>
+        </section>
+        <!-- SECTION PRODUCTOS-DESTACADOS -->
+        <section class="section-productos-destacados">
+            <div class="container fondo-sections">
+                <div class="pleca-rosa">
+                    <img src="assets/images/icons/paint-brush.svg" alt="">
+                </div>
+                <div class="row">
+                    <div class="card-deck">
+                        <div class="card">
+                            <img src="assets/images/productos/aceite-coco/Aceite-de-coco-230mil-f.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="assets/images/productos/aceite-coco/Aceite-de-coco-230mil-f.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="assets/images/productos/aceite-coco/Aceite-de-coco-230mil-f.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card-deck">
+                        <div class="card">
+                            <img src="assets/images/productos/aceite-coco/Aceite-de-coco-230mil-f.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="assets/images/productos/aceite-coco/Aceite-de-coco-230mil-f.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="assets/images/productos/aceite-coco/Aceite-de-coco-230mil-f.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-oferta-especial">
+            <div class="container section">
+                <picture>
+                    <source srcset="assets/images/mobile/home/blue-bruhs.png" media="(max-width:768px)" alt="">
+                    <source srcset="assets/images/desktop/home/blue-bruhs.png" alt="">
+                    <img class="img-fluid" src="assets/images/desktop/home/blue-bruhs.png" alt="">
+                </picture>
+                <div class="row">
+                    <div class="col-6 oferta_especial-producto">
+                        <picture>
+                            <source srcset="assets/images/mobile/home/nutella.png" media="(max-width:768px)" alt="">
+                            <source srcset="assets/images/desktop/home/nutella.png" alt="">
+                            <img class="img-fluid" src="assets/images/desktop/home/nutella.png" alt="">
+                        </picture>
+                    </div>
+                    <div class="col-6 oferta_especial-textos"></div>
+                </div>
+            </div>
+        </section>
+        <!-- SECTION NUESTRAS SEDES -->
+        <section class="section-nuestras-sedes">
+            <div class="container section fondo-sections">
+                <div class="pleca-rosa">
+                    <img src="assets/images/icons/paint-brush.svg" alt="">
+                </div>
+                <div class="row section mapas owl-theme owl-carousel owl-mapas">
+                    <div class="">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.4071285091973!2d-97.47381568604439!3d20.489530011345337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85da6a4f9981f2c3%3A0x61ff5528b8fd254!2sCasa%20del%20Pastelero%20Nany&#39;s!5e0!3m2!1ses!2sco!4v1623449326487!5m2!1ses!2sco"
+                            width="300" height="290" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                    <div class="">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.4071285091973!2d-97.47381568604439!3d20.489530011345337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85da6a4f9981f2c3%3A0x61ff5528b8fd254!2sCasa%20del%20Pastelero%20Nany&#39;s!5e0!3m2!1ses!2sco!4v1623449326487!5m2!1ses!2sco"
+                            width="300" height="290" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                    <div class="">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.4071285091973!2d-97.47381568604439!3d20.489530011345337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85da6a4f9981f2c3%3A0x61ff5528b8fd254!2sCasa%20del%20Pastelero%20Nany&#39;s!5e0!3m2!1ses!2sco!4v1623449326487!5m2!1ses!2sco"
+                            width="300" height="290" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- =======================================================================
+    | FOOTER
+    ======================================================================= -->
+    <footer class="mt-5">
+        <div class="footer-top">
+            <div class="container section">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <p>CONTACTO</p>
+                        <P>Casa del Pastelero Nany´s</P>
+                        <a href="mailto:jorge.santtoos@gmail.com">jorge.santtoos@gmail.com</a>
+                        <a href="tel:7821859808">7821859808</a>
+                        <a href="mailto:any.alamilla@gmail.com">any.alamilla@gmail.com</a>
+                        <a href="tel:7821511351">7821511351</a>
+                        <a href="mailto:casapastelero@gmail.com">casapastelero@gmail.com</a>
+                        <p>
+                            <a href="tel:1606473">1606473</a><a href="tel:1604372">1604372</a><a href="tel:1580196">1580196</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4 d-flex flex-column">
+                        <p>CATEGORIAS</p>
+                        <a href="">Historia</a>
+                        <a href="">Productos</a>
+                        <a href="">Marcas</a>
+                        <a href="">Contactos</a>
+                        <a href="">Recetas y cursos</a>
+                        <a href="">Bolsa de trabajo</a>
+                    </div>
+                    <div class="col-lg-4">
+                        <p>SIGUENOS</p>
+                        <a href="">FACEBOOK</a>
+                        <a href="">FACEBOOK</a>
+                        <a href="">FACEBOOK</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-medio">
+            <div class="container">
+                <div class="row">
+                    <p>Derechos reservados</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <p>ABCW</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- JQUERY =============================================================-->
+    <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
+    <!-- BOOSTRAP ===========================================================-->
+    <script src="assets/helpers/bootstrap/js/bootstrap.bundle.js"></script>
+    <!-- FANCYBOX ===========================================================-->
+    <script src="assets/helpers/fancybox/jquery.fancybox.min.js"></script>
+    <!-- OWLCAROUSEL ========================================================-->
+    <script src="assets/helpers/owlcarousel/owl.carousel.min.js"></script>
+    <!-- SCRIPT =============================================================-->
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
